Fix z-index in logo.

--- a/components/logo.module.css
+++ b/components/logo.module.css
@@ -1,6 +1,6 @@
 .logoWrapper {
     position: absolute;
-    z-index: 999999999999999999;
+    z-index: 999999999;
 
     width: 100vw;
     left: 50%;
